the volume is at zero when i open vlc. it does not save volume. latest 2.2.5 x64 beta 2016-11-16 windows 7 x64 latest service pack dell laptop. it also does not work on my lenovo laptop win7 x64.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
0
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Linked items
0
Link issues together to show that they're related.
Learn more.
It worked on 2.2.4 but after a few nightly versions the 2.2.5 set to zero and will not save at all. i tried uninstalling and deleting all config/reg files. the only customization i did was add the slow/faster buttons to the interface to view movies in faster 1.5x speed.
what i have noticed in config file vlcrc becomes zero if i change the volume. if i set it to 0.5 it shows as 50 percent until i try to change the volume then it resets to zero.
once it occurs and sets volume to zero it happens on any version. maybe 2.2.5 might have installed a component that is defunct and it does not get removed. if i uninstall 2.2.5 and then reinstall 2.2.4 it still happens.
Every time you test different versions of VLC (nightlies mostly), make sure to delete the %AppData%\VLC directory in between to rule out and settings issues.
Indeed Daniel you are correct. I failed miserably during my tests :(
Anyway, patch on the mailing list, this is caused by directx-volume to be a float, but the setting gets assigned an integer limit, which is undefined behavior. Patch is on the ML