directsound: Fix volume range

Setting an integer limit on a float will yield UB when trying to clamp
the volume within its given range.
Fix #17659